calligra-l10n (1:2.7.5-1) UNRELEASED; urgency=low

  [ Adrien Grellier ]
  * New upstream release:
    - new languages: bs gl sl tr
    - removed languages: cavalencia engb
  * These packages should be in section localization and not KDE
    (fix the override disparities)
  * update to my new official email address
  * lintian: debian-rules-missing-recommended-target
    add build-arch and build-indep targets
  * update to Debian policy 3.9.4 (nothing to do)
  * upstream use now xz compression
  * document the packaging in debian/README.source

  [ Pino Toscano ]
  * Bump the calligra-libs dependency to >= 2.7.2.

  [ Maximiliano Curia ]
  * Update build dependencies.

 -- Maximiliano Curia <maxy@debian.org>  Wed, 04 Dec 2013 12:36:07 +0100

calligra-l10n (1:2.4.3-1) unstable; urgency=low

  * Team upload.

  [ Pino Toscano ]
  * New upstream release.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 29 Jun 2012 10:26:15 -0300

calligra-l10n (1:2.4.2-1) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * New upstream release.
  * Bump the debhelper build dependency to >= 7.3.16.
  * Bump the calligra-libs dependency to >= 2.4.2.
  * Demote the calligra recommend to suggest.
  * Add Breaks/Replaces in each package against the old koffice-l10n of that
    language.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 30 May 2012 21:08:24 +0200

calligra-l10n (1:2.4.1-1) unstable; urgency=low

  [ Adrien Grellier ]
  [ Raúl Sánchez Siles ]
  [ Pino Toscano ]
  * Initial release.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 May 2012 18:18:11 +0200