@@ -18,6 +18,7 @@ calligra-l10n (1:2.7.5-1) UNRELEASED; urgency=low
 
   [ Maximiliano Curia ]
   * Update build dependencies.
+  * Add more phony targets.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 04 Dec 2013 12:36:07 +0100
 
